# tipytools

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup
.github/workflows/: python-publish.yml
templates/: templates.py
test/: placeholder
tipytools/: logger.py  templates.py  tipytools.py
